2006-12-13  Bruno Haible  <bruno@clisp.org>

	* build-aux/moopp: Add check for GNU sed. Generate the 4 files in the
	source directory, not in the current directory.
	* modules/ostream (Makefile.am): Test for the .h file in the source
	directory, not in the current directory. Augment MAINTAINERCLEANFILES
	and EXTRA_DIST, not CLEANFILES.
	* modules/fd-ostream (Makefile.am): Likewise.
	* modules/file-ostream (Makefile.am): Likewise.
	* modules/html-ostream (Makefile.am): Likewise.
	* modules/iconv-ostream (Makefile.am): Likewise.
	* modules/memory-ostream (Makefile.am): Likewise.
	* modules/term-ostream (Makefile.am): Likewise.
	* modules/styled-ostream (Makefile.am): Likewise.
	* modules/html-styled-ostream (Makefile.am): Likewise.
	* modules/term-styled-ostream (Makefile.am): Likewise.

2006-12-13  Bruno Haible  <bruno@clisp.org>

	Avoid crash on NetBSD.
	* lib/term-ostream.oo.c (term_ostream_create): Pass a non-NULL area
	pointer to tgetstr.

2006-12-13  Bruno Haible  <bruno@clisp.org>

	* lib/tparm.c: New file, based on a public-domain implementation part
	of Cygwin.
	* m4/termcap.m4 (gl_TERMCAP): AC_LIBOBJ of tparm.c if needed.
	(gl_TERMCAP_BODY): Test whether the system has tparm().
	* modules/termcap (Files): Add lib/tparm.c.
	(Depends-on): Add c-ctype.

2006-12-13  Bruno Haible  <bruno@clisp.org>

	* modules/termcap-h (Include): Add termcap.h.

2006-12-13  Bruno Haible  <bruno@clisp.org>

	* build-aux/moopp (sed_remove_comments): Fix handling of character
	constants. Example:  '"' /* comment */ '"'
	(sed_remove_comments_ERE): New variable.

2006-12-13  Bruno Haible  <bruno@clisp.org>

	* modules/ostream (Makefile.am): List all generated files in the moopp
	rule.
	* modules/fd-ostream (Makefile.am): Likewise.
	* modules/file-ostream (Makefile.am): Likewise.
	* modules/html-ostream (Makefile.am): Likewise.
	* modules/iconv-ostream (Makefile.am): Likewise.
	* modules/memory-ostream (Makefile.am): Likewise.
	* modules/term-ostream (Makefile.am): Likewise.