@@ -100,6 +100,7 @@ m4/absolute-header.m4
 
 Depends-on:
 iconv
+stdarg
 no-c++
 
 configure.ac:
